# tauri-oauth-supabase

./: .env.local.example  LICENSE.MD  README.md  package.json  pnpm-lock.yaml
src/: Account.tsx  App.tsx  Auth.tsx  index.css  supabaseClient.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
